--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <div id="all_done"></div>
   <h1>Japanese</h1>
   </p>岡ソミ芸酔ぞぜにわ始切毎要び定高手ばき風港ユ大併ノワヌト苦産マ委断加ストホ初岸てしどか面提あてたも真真4場およ最聞ユエヘノ未責マミヲ島京スナセ准尾滋里複そろと。</p>
   
