--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
 <head>
   <style>
-    body: {font-family: 'Noto Sans CJK', 'sans-serif';}
+    body: {font-family: 'Open Sans', 'Noto Sans CJK', 'sans-serif';}
   </style>
 </head>
 
 <body>
   <div id="all_done"></div>
+  
+  <h1>English</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  
   <h1>Japanese</h1>
   </p>岡ソミ芸酔ぞぜにわ始切毎要び定高手ばき風港ユ大併ノワヌト苦産マ委断加ストホ初岸てしどか面提あてたも真真4場およ最聞ユエヘノ未責マミヲ島京スナセ准尾滋里複そろと。</p>
   
