--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <style>
-    body: {font-family: 'Open Sans', 'Noto Sans CJK', 'sans-serif';}
+    body: {font-family: 'Open Sans', 'Noto Sans CJK', sans-serif;}
   </style>
 </head>
 
