--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <style>
     body {font-family: 'Open Sans', 'Noto Sans CJK', serif;}
+    .bold {font-weight: bold;}
+    .light {font-weight: 300;}
   </style>
 </head>
 
@@ -13,12 +15,18 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   
   <h1>Japanese</h1>
-  </p>岡ソミ芸酔ぞぜにわ始切毎要び定高手ばき風港ユ大併ノワヌト苦産マ委断加ストホ初岸てしどか面提あてたも真真4場およ最聞ユエヘノ未責マミヲ島京スナセ准尾滋里複そろと。</p>
+  <p>馬ゅをがラ宮3実ソイ拝余リトねド能多ゆろれる問本品麻だぞッょ南介チ欧国引キヲ戦問市指倒停へり。</p>
+  <p class="bold">重ミナハタ応国コヌマキ団核りれゃ購日わ介億野フそゅ削性けぐ京納伎内セヱヌネ高相づじば白就止やもるへ差故なく開人母准わい。</p>
+  <p class="light">論クみょお都未アエ起授ヨチ応害レサ動学芸ニ関山じごこ静8領りしせけ京自軽せづ用央率ぐ保喚宴嶺せた。</p>
   
   <h1>Chinese</h1>
   <p>主金定済載政米沢質賞提以性止大闘。対月展燃主抜保森行巡面子申終。</p>
+  <p class="bold">約運定作嫌物点要問士能箱終館慧唱女更書。</p>
+  <p class="light">農真提婦計努著需州有最検縁天公図教大北驚。</p>
   
   <h1>Korean</h1>
   <p>공무원은 국민전체에 대한 봉사자이며. 언론·출판에 대한 허가나 검열과 집회·</p>
+  <p class="bold">유독음식물공급·포로에 관한 죄중 법률이 정한 경우에 한하여 단심으로 할 수 있다.</p>
+  <p class="light">대한민국의 경제질서는 개인과 기업의 경제상의 자유와 창의를 존중함을 기본으로 한다.</p>
 </body>
 </html>
