--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <style>
-    body {font-family: 'Open Sans', 'Noto Sans CJK', serif;}
+    body {font-family: 'Open Sans', serif;}
     .bold {font-weight: bold;}
     .light {font-weight: 300;}
   </style>
